<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.github.oeuvres</groupId>
    <artifactId>alix</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>
    <url>http://oeuvres.github.io/alix</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <maven.compiler.plugin.version>3.15.0</maven.compiler.plugin.version>
        <tests.skip>true</tests.skip>
    </properties>


    <modules>
        <!-- generic data structure and algorithms, with no dependencies -->
        <module>util</module>
        <!-- lexical resources with no dependencies -->
        <module>fr</module>
        <!-- tools for lucene analysis, French token filters rely on fr -->
        <module>analysis</module>
        <!-- tools for lucene search -->
        <module>search</module>
        <!-- tools for lucene, used by analysis and search -->
        <module>common</module>
        <!-- tests of all modules -->
        <module>test</module>
        <!-- some tools for servlet/jsp applications -->
        <module>web</module>
    </modules>


    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.15.0</version>
                    <!-- optional shared config -->
                </plugin>

                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>exec-maven-plugin</artifactId>
                    <version>3.6.3</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.5.5</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>


</project>
